[metadata]
name = msas-gnn
version = 1.0.0
author = Hao Chang
description = MSAS-GNN: Spectrally-Driven Adaptive Sparse GNN
license = MIT
python_requires = >=3.10

[options]
package_dir =
    = src
packages = find:
install_requires =
    torch>=2.0.0
    torch-geometric>=2.3.0
    ogb>=1.3.6
    scipy>=1.11.0
    scikit-learn>=1.3.0
    numpy>=1.26.0
    pandas>=2.1.0
    matplotlib>=3.8.0
    seaborn>=0.13.0
    optuna>=3.5.0
    pyyaml>=6.0.0
    tqdm>=4.66.0
    joblib>=1.3.0
    networkx>=3.2.0

[options.packages.find]
where = src
